fix(feed-post): author address with dash wraps with float left

--- a/src/components/feed-post/feed-post.module.css
+++ b/src/components/feed-post/feed-post.module.css
@@ -124,6 +124,8 @@
 .authorAddressVisible {
   float: left;
   width: 0;
+  /* sometimes the text wraps with float left */
+  white-space: nowrap;
 }
 
 @keyframes authorAddressChangedAnimation {
